Ensure "Dash" apps output is not covered by slider labels.

--- a/files/assets/css/custom.css
+++ b/files/assets/css/custom.css
@@ -81,6 +81,10 @@ div#apps.row {
     margin-left: 0;
 }
 
+pre.app-output {
+    margin-top: 33px;
+}
+
 /*** Gitter ***/
 .gitter-open-chat-button {
     background-color: rgba(0, 0, 0, 0.65);
