--- a/output/assets/css/all-nocdn.css
+++ b/output/assets/css/all-nocdn.css
@@ -915,6 +915,10 @@ div#apps.row {
     margin-left: 0;
 }
 
+pre.app-output {
+    margin-top: 33px;
+}
+
 /*** Gitter ***/
 .gitter-open-chat-button {
     background-color: rgba(0, 0, 0, 0.65);
